[package]
  name = "task"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  categories = ["date-and-time"]
  description = """
    A lightweight task scheduling system. Version 0.0.0 is published as a placeholder.
  """
  documentation = "https://docs.rs/task"
  keywords = [ "schedule", "scheduler", "task", "cron" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/task.rs"
  version = "0.0.0"

[dependencies]

[dev-dependencies]

[badges]
  travis-ci = { repository = "echelon/task.rs" }
