[package]
  name = "task"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  categories = ["date-and-time"]
  description = "A lightweight task scheduling system."
  documentation = "https://docs.rs/task"
  keywords = [ "schedule", "scheduler", "task", "cron" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/task.rs"
  version = "0.0.1"

[dependencies]
  crontab = "0.1.*"
  log = "0.3.*"
  threadpool = "1.7.*"
  time = "0.1.*"

[badges]
  travis-ci = { repository = "echelon/task.rs" }
